--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -41,7 +41,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+       os: [ubuntu-latest]
+       python-version: [3.7, 3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v4
