--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -42,7 +42,7 @@ jobs:
       fail-fast: false
       matrix:
        os: [ubuntu-latest]
-       python-version: [3.7, 3.8, 3.9]
+###       python-version: [3.7, 3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v4
