--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 # policies up to CMake 3.27
 cmake_minimum_required(VERSION 3.15...3.27)
 
-set(SKBUILD_PROJECT_NAME cary_build_example)
+set(SKBUILD_PROJECT_NAME Hello)
 set(SKBUILD_PROJECT_VERSION 0.1.2)
 
 # Scikit-build-core sets these values for you, or you can just hard-code the
@@ -12,16 +12,10 @@ project(
   VERSION ${SKBUILD_PROJECT_VERSION}
   LANGUAGES CXX)
 
-# Find the module development requirements (requires FindPython from 3.17 or
-# scikit-build-core's built-in backport)
 find_package(Python REQUIRED COMPONENTS Interpreter Development.Module)
 
-# Add a library using FindPython's tooling (pybind11 also provides a helper like
-# this)
-python_add_library(_XXX MODULE src/main.cpp WITH_SOABI)
+python_add_library(Hello MODULE src/main.cpp WITH_SOABI)
 
-# This is passing in the version as a define just as an example
-target_compile_definitions(_XXX PRIVATE VERSION_INFO=${PROJECT_VERSION})
+target_compile_definitions(Hello PRIVATE VERSION_INFO=${PROJECT_VERSION})
 
-# The install directory is the output (wheel) directory
-install(TARGETS _XXX DESTINATION cary_build_example)
+install(TARGETS Hello DESTINATION Hello)
