--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -23,7 +23,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        python-minor: ['10' '11', '12']
+        python-minor: ['10', '11', '12']
 
     steps:
     - uses: actions/checkout@v4
